--- a/internship.html
+++ b/internship.html
@@ -61,7 +61,7 @@
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
+<h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -117,11 +117,11 @@
 <p><span class="badge badge-light">Los Angeles California, United States</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692298202-online-marketing-internship-dutch-native-speaker'>Bynder Online Marketing Internship - Dutch Native Speaker | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692298202-online-marketing-internship-dutch-native-speaker'>Bynder Online Marketing Internship - Dutch Native Speaker | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692357508-online-marketing-internship-italian-native-speaker'>Bynder Online Marketing Internship - Italian Native Speaker | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692357508-online-marketing-internship-italian-native-speaker'>Bynder Online Marketing Internship - Italian Native Speaker | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://rubensteintech.applytojob.com/apply/85jDr7K5qi/Web-Software-Engineering-Intern-Fall-2019'>Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rubensteintech.applytojob.com/apply/85jDr7K5qi/Web-Software-Engineering-Intern-Fall-2019'>Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -199,7 +199,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://digimind.recruiterbox.com/jobs/fk01oxq'>
+<h5><a href='http://digimind.recruiterbox.com/jobs/fk01oxq'>
     Internship - Graphic Design Assistant  at Digimind
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -259,7 +259,7 @@ in Berlin (published: 13.11.2018). Apply now or check the other available jobs.<
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://democracyfund.applytojob.com/apply/YxPUPjWHa1/Governance-Program-Internship-Fall-2019'>Governance Program Internship, Fall 2019 - Democracy Fund ...</a></h5> 
+<h5><a href='https://democracyfund.applytojob.com/apply/YxPUPjWHa1/Governance-Program-Internship-Fall-2019'>Governance Program Internship, Fall 2019 - Democracy Fund ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... POSITION SUMMARY: Democracy Fund is seeking highly motivated candidates 
 from across the political spectrum to support the Governance Program for the?...</p>
@@ -351,7 +351,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -376,7 +376,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
     Marine Mammal Rescue and Response Intern - Monterey Bay Operations at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -409,7 +409,7 @@ Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
+<h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... We are building a fully automated hightech farm for a totally new industry, insect 
 breeding. Therefore, we are building the technology to understand and optimize
@@ -437,7 +437,7 @@ quality?...</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://sephora-sea.workable.com/j/3E575342A6'>Sephora SEA - Jobs: Merchandising (Category) Intern - 6 months - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sephora-sea.workable.com/j/3E575342A6'>Sephora SEA - Jobs: Merchandising (Category) Intern - 6 months - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -463,7 +463,7 @@ quality?...</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iubenda.workable.com/j/BD007BF8F5'>iubenda - Jobs: Legal Internship - Apply online</a></h5> 
+<h5><a href='https://iubenda.workable.com/j/BD007BF8F5'>iubenda - Jobs: Legal Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
